@@ -1,5 +1,7 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* main/movie.c: improve movie loading
+
 	* main/mission.c: improve mission loading
 
 	* main/ai.c, main/ai.h, main/gameseq.c, main/newmenu.c,
